--- a/src/main/resources/views/game.fxml
+++ b/src/main/resources/views/game.fxml
@@ -19,7 +19,7 @@
     <left></left>
     <right></right>
     <center>
-        <Label>W</Label>
+        <GridPane id="grid" fx:id="grid" alignment="CENTER" hgap="1" vgap="1"></GridPane>
     </center>
     <bottom>
     </bottom>
