--- a/src/main/resources/views/game.fxml
+++ b/src/main/resources/views/game.fxml
@@ -41,6 +41,19 @@
             <BorderPane.margin>
                 <Insets left="15" right="15" top="15" bottom="15"/>
             </BorderPane.margin>
+            <spacing>30</spacing>
+            <Button prefWidth="140" prefHeight="32" text="&#9654;  Start" onAction="#startClicked"/>
+            <spacing>10</spacing>
+            <Button prefWidth="140" prefHeight="32" text="&#10074;  Pause" onAction="#pauseClicked"/>
+            <spacing>10</spacing>
+            <Button prefWidth="140" prefHeight="32" text="&#9654;&#9654;  Next" onAction="#nextClicked"/>
+            <spacing>10</spacing>
+            <Button prefWidth="140" prefHeight="32" text="&#9632;  Reset" onAction="#resetClicked"/>
+            <spacing>30</spacing>
+            <HBox alignment="CENTER" prefWidth="150">
+                <Text>Generation: </Text>
+                <Text id="generationCount" fx:id="generationCount">0</Text>
+            </HBox>
         </UIEditor>
     </right>
     <center>
@@ -51,27 +64,10 @@
             <BorderPane.margin>
                 <Insets left="15" right="15" top="15" bottom="15"/>
             </BorderPane.margin>
-            <HBox alignment="CENTER">
-                <BorderPane.margin>
-                    <Insets left="15" right="15" top="15" bottom="15"/>
-                </BorderPane.margin>
-                <Button prefWidth="80" prefHeight="32" text="&#9632;  Reset" onAction="#resetClicked"/>
-                <spacing>10</spacing>
-                <Button prefWidth="80" prefHeight="32" text="&#10074;  Pause" onAction="#pauseClicked"/>
-                <spacing>10</spacing>
-                <Button prefWidth="80" prefHeight="32" text="&#9654;  Start" onAction="#startClicked"/>
-                <spacing>10</spacing>
-                <Button prefWidth="80" prefHeight="32" text="&#9654;&#9654;  Next" onAction="#nextClicked"/>
-                <spacing>10</spacing>
-                <HBox alignment="CENTER" prefWidth="150">
-                    <Text>Generation: </Text>
-                    <Text id="generationCount" fx:id="generationCount">0</Text>
-                </HBox>
-            </HBox>
             <spacing>30</spacing>
-            <HBox alignment="CENTER">
+            <HBox alignment="CENTER_LEFT">
                 <BorderPane.margin>
-                    <Insets left="15" right="15" top="15" bottom="15"/>
+                    <Insets left="15" right="15" top="15" bottom="25"/>
                 </BorderPane.margin>
                 <Label>Zoom:</Label>
                 <UIZoomSlider id="zoomSlider" fx:id="zoomSlider"></UIZoomSlider>
